fix: keep BLE service compatible with minSdk 26